2022-11-09 - v0.0.5 - Balance
# Changed
## The Sanctum Guardian
- Increased HP to 45000 from 3200
- Increased Atk to 85 from 42
- Increased Str to 85 from 32
- Increased Def to 75 from 35
- Increased Ranged to 85 from 1
- Increased Magic to 85 from 1
- Decreased Attack Speed to 2.4 from 3.6
- Bone type to Bones
## Masuta the Ascended
- Increased HP to 55000 from 3200
- Increased Atk to 90 from 42
- Increased Str to 90 from 32
- Increased Def to 85 from 35
- Increased Ranged to 90 from 1
- Increased Magic to 90 from 1
- Decreased Attack Speed to 2.4 from 3.6
- Bone type to Bones
## Seiryu the Azure Serpent
- Increased HP to 750000 from 3200
- Increased Atk to 95 from 42
- Increased Str to 95 from 32
- Increased Def to 80 from 35
- Increased Ranged to 95 from 1
- Increased Magic to 95 from 1
- Decreased Attack Speed to 2.4 from 3.6
- Bone type to Bones
## Astellarn
- Increased HP to 25000 from 3200
- Increased Atk to 90 from 42
- Increased Str to 90 from 32
- Increased Def to 85 from 35
- Increased Ranged to 90 from 1
- Increased Magic to 90 from 1
- Decreased Attack Speed to 2.4 from 3.6
## Black Stone Dragon
- Increased HP to 65000 from 3200
- Increased Atk to 90 from 42
- Increased Str to 90 from 32
- Increased Def to 85 from 35
- Increased Ranged to 90 from 1
- Increased Magic to 90 from 1
- Decreased Attack Speed to 2.4 from 3.6
## Verak Lith
- Increased HP to 60000 from 3200
- Increased Atk to 90 from 42
- Increased Str to 90 from 32
- Increased Def to 85 from 35
- Increased Ranged to 90 from 1
- Increased Magic to 90 from 1
## Crassian Leviathan
- Increased HP to 38000 from 3200
- Increased Atk to 92 from 42
- Increased Str to 90 from 32
- Increased Def to 85 from 35
- Increased Ranged to 90 from 1
- Increased Magic to 90 from 1
- Decreased Attack Speed to 2.4 from 3.6
## Taraket the Necromancer
- Increased HP to 40000 from 3200
- Increased Atk to 92 from 42
- Increased Str to 90 from 32
- Increased Def to 85 from 35
- Increased Ranged to 90 from 1