@@ -1,4 +1,5 @@
 # The-World
 A mod for Melvor Idle
 
- The mod's images wont be uploaded to github as they are owned by Jagex Ltd
+	The mod's images wont be uploaded to github as they are owned by Jagex Ltd
+	The mod can be found here: https://mod.io/g/melvoridle/m/the-world
