@@ -1,5 +1,5 @@
 {
     "namespace": "TheWorld",
     "icon": "assets/logo.png",
-    "setup": "setup.mjs"
+    "setup": "src/setup.mjs"
 }
