@@ -1,0 +1,3 @@
+export async function Load(gameData) {
+    console.log("Dungeons Loaded!");
+}
